package com.example.piper.piperchat.model;

public enum RoomType {
    PUBLIC,
    PRIVATE,
    CHANNEL
}
